# thumbnail_creator

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: app_config.rs  default_config.json  download.rs  main.rs  storage.rs  thumbnail.rs  thumbnail_handler.rs
src/test_data/test_content_length/: request.json  response.json
src/test_data/test_incorrect_schema/: request.json
src/test_data/test_invalid_url/: response.json
src/test_data/test_status_code/: response.json
src/test_data/test_too_many_urls/: request.json
test_data/in/test_content_length/: request.json  response.json
test_data/in/test_content_type/: request.json  response.json
test_data/in/test_incorrect_schema/: response.json
test_data/in/test_invalid_url/: request.json
test_data/in/test_multiple_images/: request.json  response.json
test_data/in/test_non_unique/: request.json  response.json
test_data/in/test_status_code/: request.json
