[package]
name = "thumbnail_creator"
version = "0.1.0"
authors = ["Zaur Bogus <boguszaur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "1.0", features = ["ssl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1.5"
image = "0.21.2"
futures = "0.1.26"
rayon = "1.1"
md5 = "0.6.1"
env_logger = "0.5"
actix-rt = "0.2.4"
log = "0.4.7"
reqwest = "0.9.19"
actix-files = "0.1.4"
url = "1.7.2"
bytes = "0.4.12"
config = "0.9"